--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <div id="list"></div>
 
   <div class="choose-theme">
-    <span class="color active" style="--color:#11aaff"></span>
-    <span class="color" style="--color:#58ed80"></span>
-    <span class="color" style="--color:#f5a340"></span>
-    <span class="color" style="--color:#f780ff"></span>
-    <span class="color" style="--color:#aa53f2"></span>
+    <span class="color blue" style="--color:#11aaff"></span>
+    <span class="color green" style="--color:#58ed80"></span>
+    <span class="color orange" style="--color:#f5a340"></span>
+    <span class="color pink" style="--color:#f780ff"></span>
+    <span class="color purple" style="--color:#aa53f2"></span>
   </div>
 
   <script src="./script.js"></script>
